Animated Progress Bar

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <erik-animated-progress-bar progress="50"></erik-animated-progress-bar>
 
 </body>
 </html>
