WIP toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
@@ -9,9 +10,17 @@
   <script nomodule src="/build/stencil-starter-project-name.js"></script>
 
 </head>
+
 <body>
 
+  <h1>Erik's Stencil Components</h1>
+
+  <h2>Animated Progress Bar</h2>
   <erik-animated-progress-bar progress="50"></erik-animated-progress-bar>
 
+  <h2>Toggle Button</h2>
+  <erik-toggle-button checked></erik-toggle-button>
+
 </body>
+
 </html>
