Toggle button looking nicer

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,14 @@
   <erik-animated-progress-bar progress="50"></erik-animated-progress-bar>
 
   <h2>Toggle Button</h2>
+  <h3>Default</h3>
+  <erik-toggle-button></erik-toggle-button>
+  <h3>Default Disabled</h3>
+  <erik-toggle-button disabled></erik-toggle-button>
+  <h3>On</h3>
   <erik-toggle-button checked></erik-toggle-button>
+  <h3>On Disabled</h3>
+  <erik-toggle-button checked disabled></erik-toggle-button>
 
 </body>
 
