publishing www folder for gh-pages

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <script type="module" src="/build/stencil-starter-project-name.esm.js"></script>
   <script nomodule src="/build/stencil-starter-project-name.js"></script>
-
+  <base href="/[repo]/">
 </head>
 
 <body>
