Focus states looking good, just need to add onclick handler to force it into a checked state

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
   <h2>Radio Group (Vertical)</h2>
   <form onsubmit="alert('submitted')">
-    <erik-radio-group name="from" vertical>
+    <erik-radio-group name="to" vertical>
       <erik-radio-button value="field" checked>
         Field
       </erik-radio-button>
