Adding all scales

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,37 @@
 
 
   <h2>Radio Group (Horizontal)</h2>
+  <h3>Small</h3>
   <form onsubmit="alert('submitted')">
-    <erik-radio-group name="from">
+    <erik-radio-group name="horizontal-small">
+      <erik-radio-button value="field" checked>
+        Field
+      </erik-radio-button>
+      <erik-radio-button value="customDate">
+        Custom Date
+      </erik-radio-button>
+      <erik-radio-button value="other">
+        Other
+      </erik-radio-button>
+    </erik-radio-group>
+  </form>
+  <h3>Medium</h3>
+  <form onsubmit="alert('submitted')">
+    <erik-radio-group name="horizontal-medium" scale="medium">
+      <erik-radio-button value="field" checked>
+        Field
+      </erik-radio-button>
+      <erik-radio-button value="customDate">
+        Custom Date
+      </erik-radio-button>
+      <erik-radio-button value="other">
+        Other
+      </erik-radio-button>
+    </erik-radio-group>
+  </form>
+  <h3>Large</h3>
+  <form onsubmit="alert('submitted')">
+    <erik-radio-group name="horizontal-large" scale="large">
       <erik-radio-button value="field" checked>
         Field
       </erik-radio-button>
@@ -53,8 +82,37 @@
   <p></p>
 
   <h2>Radio Group (Vertical)</h2>
+  <h3>Small</h3>
   <form onsubmit="alert('submitted')">
-    <erik-radio-group name="to" vertical>
+    <erik-radio-group name="vertical-small" vertical>
+      <erik-radio-button value="field" checked>
+        Field
+      </erik-radio-button>
+      <erik-radio-button value="customDate">
+        Custom Date
+      </erik-radio-button>
+      <erik-radio-button value="other">
+        Other
+      </erik-radio-button>
+    </erik-radio-group>
+  </form>
+  <h3>Medium</h3>
+  <form onsubmit="alert('submitted')">
+    <erik-radio-group name="vertical-medium" scale="medium" vertical>
+      <erik-radio-button value="field" checked>
+        Field
+      </erik-radio-button>
+      <erik-radio-button value="customDate">
+        Custom Date
+      </erik-radio-button>
+      <erik-radio-button value="other">
+        Other
+      </erik-radio-button>
+    </erik-radio-group>
+  </form>
+  <h3>Large</h3>
+  <form onsubmit="alert('submitted')">
+    <erik-radio-group name="vertical-large" scale="large" vertical>
       <erik-radio-button value="field" checked>
         Field
       </erik-radio-button>
