--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Stencil Component Starter</title>
+  <title>Erik Stencil Components</title>
 
   <script type="module" src="/build/stencil-starter-project-name.esm.js"></script>
   <script nomodule src="/build/stencil-starter-project-name.js"></script>
@@ -21,112 +21,17 @@
 
   <h1>Erik's Stencil Components</h1>
 
-  <h2>Animated Progress Bar</h2>
-  <erik-animated-progress-bar progress="50"></erik-animated-progress-bar>
-
-  <h2>Toggle Button</h2>
-  <h3>Default</h3>
-  <erik-toggle-button></erik-toggle-button>
-  <h3>Default Disabled</h3>
-  <erik-toggle-button disabled></erik-toggle-button>
-  <h3>On</h3>
-  <erik-toggle-button checked></erik-toggle-button>
-  <h3>On Disabled</h3>
-  <erik-toggle-button checked disabled></erik-toggle-button>
-
-
-  <h2>Radio Group (Horizontal)</h2>
-  <h3>Small</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="horizontal-small">
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-  <h3>Medium</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="horizontal-medium" scale="medium">
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-  <h3>Large</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="horizontal-large" scale="large">
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-
-  <p></p>
-
-  <h2>Radio Group (Vertical)</h2>
-  <h3>Small</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="vertical-small" vertical>
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-  <h3>Medium</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="vertical-medium" scale="medium" vertical>
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-  <h3>Large</h3>
-  <form onsubmit="alert('submitted')">
-    <erik-radio-group name="vertical-large" scale="large" vertical>
-      <erik-radio-button value="field" checked>
-        Field
-      </erik-radio-button>
-      <erik-radio-button value="customDate">
-        Custom Date
-      </erik-radio-button>
-      <erik-radio-button value="other">
-        Other
-      </erik-radio-button>
-    </erik-radio-group>
-  </form>
-
-  <p></p>
-
+  <ul class="nav">
+    <li>
+      <a href="/demos/erik-animated-progress-bar.html">erik-animated-progress-bar</a>
+    </li>
+    <li>
+      <a href="/demos/erik-toggle-button.html">erik-toggle-button</a>
+    </li>
+    <li>
+      <a href="/demos/erik-radio-group.html">erik-radio-group</a>
+    </li>
+  </ul>
 
 </body>
 
