Refactoring css in radio-button to use host attribute selectors instead of classnames directly on the span.  Also fixing bug with focusing/checking a radio-group without an initial checked value.

--- a/src/demos/erik-radio-group.html
+++ b/src/demos/erik-radio-group.html
@@ -20,8 +20,13 @@
             font-family: "Avenir Next";
         }
 
+        /* These styles won't apply because <radio-button> is inside a shadow root! */
         label {
             color: magenta;
+        }
+        /* These styles won't work because we're applying these styles inline to the input, which override the specificity */
+        input[type=radio] {
+            opacity: 1;
         }
     </style>
 </head>
