--- a/src/demos/erik-radio-group.html
+++ b/src/demos/erik-radio-group.html
@@ -24,6 +24,7 @@
         label {
             color: magenta;
         }
+
         /* These styles won't work because we're applying these styles inline to the input, which override the specificity */
         input[type=radio] {
             opacity: 1;
@@ -53,8 +54,8 @@
         </erik-radio-button>
     </erik-radio-group>
 
-    <h3>Medium</h3>
-    <erik-radio-group name="horizontal-medium" scale="medium">
+    <h4>All Options Disabled</h4>
+    <erik-radio-group name="horizontal-small-disabled" disabled>
         <erik-radio-button value="field">
             Field
         </erik-radio-button>
@@ -66,10 +67,22 @@
         </erik-radio-button>
     </erik-radio-group>
 
-    <h3>Large</h3>
-    <form onsubmit="alert('submitted')"">
-        <erik-radio-group name=" horizontal-large" scale="large">
-        <erik-radio-button value="field">
+    <h4>Single Option Disabled</h4>
+    <erik-radio-group name="horizontal-small-disabled-single">
+        <erik-radio-button value="field" disabled>
+            Disabled
+        </erik-radio-button>
+        <erik-radio-button value="customDate">
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other" checked>
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
+
+    <h3>Medium</h3>
+    <erik-radio-group name="horizontal-medium" scale="medium">
+        <erik-radio-button value="field" checked>
             Field
         </erik-radio-button>
         <erik-radio-button value="customDate">
@@ -78,9 +91,72 @@
         <erik-radio-button value="other">
             Other
         </erik-radio-button>
-        </erik-radio-group>
-        <button type="submit">Submit</button>
-    </form>
+    </erik-radio-group>
+
+    <h4>All Options Disabled</h4>
+    <erik-radio-group name="horizontal-medium-disabled" scale="medium" disabled>
+        <erik-radio-button value="field">
+            Field
+        </erik-radio-button>
+        <erik-radio-button value="customDate" checked>
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other">
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
+
+    <h4>Single Option Disabled</h4>
+    <erik-radio-group name="horizontal-medium-disabled" scale="medium">
+        <erik-radio-button value="field">
+            Field
+        </erik-radio-button>
+        <erik-radio-button value="customDate" disabled>
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other" checked>
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
+
+    <h3>Large</h3>
+    <erik-radio-group name=" horizontal-large" scale="large">
+        <erik-radio-button value="field" checked>
+            Field
+        </erik-radio-button>
+        <erik-radio-button value="customDate">
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other">
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
+
+    <h4>All Options Disabled</h4>
+    <erik-radio-group name=" horizontal-large-disabled" scale="large" disabled>
+        <erik-radio-button value="field">
+            Field
+        </erik-radio-button>
+        <erik-radio-button value="customDate" checked>
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other">
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
+
+    <h4>Single Option Disabled</h4>
+    <erik-radio-group name=" horizontal-large-disabled-single" scale="large">
+        <erik-radio-button value="field">
+            Field
+        </erik-radio-button>
+        <erik-radio-button value="customDate">
+            Custom Date
+        </erik-radio-button>
+        <erik-radio-button value="other" checked disabled>
+            Other
+        </erik-radio-button>
+    </erik-radio-group>
 
     <p></p>
 
