--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Erik Stencil Components</title>
+  <title>Erik's Web Components</title>
 
   <script type="module" src="/build/stencil-starter-project-name.esm.js"></script>
   <script nomodule src="/build/stencil-starter-project-name.js"></script>
@@ -21,7 +21,7 @@
 
   <h1>Erik's Stencil Components</h1>
 
-  <ul class="nav">
+  <ul c lass="nav">
     <li>
       <a href="/demos/erik-animated-progress-bar.html">erik-animated-progress-bar</a>
     </li>
@@ -30,6 +30,13 @@
     </li>
     <li>
       <a href="/demos/erik-radio-group.html">erik-radio-group</a>
+    </li>
+  </ul>
+
+  <h1>Erik's Lit Components</h1>
+  <ul class="nav">
+    <li>
+      <a href="/demos/erik-lit-todo-app.html">erik-lit-todo-app</a>
     </li>
   </ul>
 
