Simple litelement js radio stuff (probably won't keep this)

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <h1>Erik's Stencil Components</h1>
 
-  <ul c lass="nav">
+  <ul class="nav">
     <li>
       <a href="/demos/erik-animated-progress-bar.html">erik-animated-progress-bar</a>
     </li>
@@ -37,6 +37,9 @@
   <ul class="nav">
     <li>
       <a href="/demos/erik-lit-todo-app.html">erik-lit-todo-app</a>
+    </li>
+    <li>
+      <a href="/demos/erik-lit-radio-group.html">erik-lit-radio-group</a>
     </li>
   </ul>
 
